--- a/reports/build.xml
+++ b/reports/build.xml
@@ -42,8 +42,8 @@
         <path refid="Apache Tomcat v7.0 [Apache Tomcat v7.0].libraryclasspath"/>
         <path refid="Web App Libraries.libraryclasspath"/>
         <path refid="EAR Libraries.libraryclasspath"/>
-        <pathelement location="../../../../../Verizon New/verizon/ojdbc14.jar/ojdbc14.jar"/>
-        <pathelement location="../../../Downloads/gson-2.3.1.jar"/>
+        <pathelement location="c:/lib/ojdbc14.jar"/>
+        <pathelement location="c:/lib/jstl-1.2.jar"/>
     </path>
     <target name="init">
         <mkdir dir="build/classes"/>
