--- a/reports/build.xml
+++ b/reports/build.xml
@@ -80,4 +80,11 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
+              	<target name="war" depends="build">
+              	              	              	    <war destfile="bireporting.war" webxml="WebContent/WEB-INF/web.xml">
+              	              	              	        <fileset dir="WebContent"/>
+              	              	              	        <lib dir="WebContent/WEB-INF/lib"/>
+              	              	              	        <classes dir="build/classes"/>
+              	              	              	    </war>
+              	              	              	</target>
 </project>
